# Cricket-Coach_Fantasy-Cricket-Assistant

./: .gitignore  .replit  README.md  ai_manager.py  app.py  assistant.py  auth.py  cricbuzz-live.git.txt  cricbuzz_client.py  cricket_api_client.py  cricket_assistant.db  cricket_data.py  cricket_data_adapter.py  cricket_data_reliable.py  cricket_scraper.py  cricket_scraper_improved.py  cricket_web_scraper.py  cricsheet_parser.py  data_storage.py  db_manager.py  fantasy_recommendations.py  fantasy_rules.py  fix_app.py  gemini_assistant.py  init_db.py  logger.py  models.py  openai_assistant.py  pyproject.toml  requirements.txt  run_tests.py  test_ai_integration.py  test_api_keys.py  test_chatbot.py  test_cricket_data.py  test_player_stats.py  test_simple.py  visualizations.py
.streamlit/: config.toml
data/: chat_history.json  match_data.json  players_data.json  user_preferences.json
pages/: 1_🏏_Matches.py  2_👤_Players.py  matches.py  players.py
tests/: conftest.py  test_ai_manager.py  test_auth.py  test_cricket_api.py  test_cricket_data_adapter.py  test_db_manager.py
