[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-chat>=0.1.1",
    "streamlit>=1.45.0",
    "pandas>=2.2.3",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "google-generativeai>=0.8.5",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "openai>=1.78.0",
]
